syntax = "proto3";

package datasketches_pb;

message ThetaSketchDup {
  uint32 preamble_longs = 1;
  uint32 serial_version = 2;
  uint32 sketch_type = 3;
  uint32 rf = 4;
  uint32 lg_nom_size = 5;
  uint32 lg_cur_size = 6;
  uint32 flags_byte = 7;
  uint32 seed_hash = 8;
  uint32 num_keys = 9;
  double p = 10;
  uint64 theta = 11;

  message HashMapCount {
    uint64 hash_val = 1; 
    int64 count = 2;
  }

  repeated HashMapCount keys = 12;
}
